2011-10-11  Steve VanDeBogart  <vandebo@chromium.org>

        [chromium] Add accessor for plugin request to not scale print output.
        https://bugs.webkit.org/show_bug.cgi?id=68853

        Reviewed by Darin Fisher.

        * public/WebFrame.h:
        * public/WebPlugin.h:
        (WebKit::WebPlugin::isPrintScalingDisabled):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::isPrintScalingDisabledForPlugin):
        * src/WebFrameImpl.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::isPrintScalingDisabled):
        * src/WebPluginContainerImpl.h:

2011-10-11  Antoine Labour  <piman@chromium.org>

        Separate compositor client thread from webkit's main thread.
        https://bugs.webkit.org/show_bug.cgi?id=69048

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * public/WebKitPlatformSupport.h:
        (WebKit::WebKitPlatformSupport::currentThread):
        * src/CCMainThreadImpl.cpp: Added.
        (WTF::TaskWrapper::TaskWrapper):
        (WTF::TaskWrapper::~TaskWrapper):
        (WTF::TaskWrapper::run):
        (WebCore::CCMainThread::initialize):
        (WebCore::CCMainThread::postTask):

2011-10-11  Simon Fraser  <simon.fraser@apple.com>

        Make custom scrollbar theme for use in DRT, to reduce pixel diffs between platforms
        https://bugs.webkit.org/show_bug.cgi?id=68134

        Reviewed by Darin Adler.

        Use ScrollbarThemeMock when the setting to use mock scrollbars is enabled.
        
        Make ScrollbarTheme::nativeTheme() private, and add a new static theme() method
        that reads the setting, and returns the mock theme if set. All callers now use
        theme() rther than nativeTheme(). Add the new ScrollbarTheme.cpp file to the build.

        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbar::defaultThickness):

2011-10-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97202, r97207, and r97215.